tests/fixtures/invalid/pow_dict_list_none.py
# Cannot call pow() with Dict[str, int], List[int], None
x = pow({"a": 1}, [1, 2, 3], None)
